argocd/argocd/operator/ingress.ftl.yaml
  <#if (!isOpenshift && isInsecure)>
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: argocd
    namespace: "config.application.namePrefix.argocd"
    labels:
      app: argocd-server
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
      nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  spec:
    rules:
      - host: "${argocd.host}"
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: argocd-server
                  port:
                    number: 80
    </#if>
